[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judgement-tracker"
version = "0.0.1"
description = "A CLI score tracker for the Judgement card game"
dependencies = [
    "typer",
    "rich",
    "sqlmodel"
]

[project.scripts]
judgement = "judgement.main:app"